--- a/containers/nginx/minds.conf
+++ b/containers/nginx/minds.conf
@@ -7,8 +7,8 @@ server {
     root /var/www/Minds/front/public;
     error_log /dev/stdout info;
 
-    if ($host = 'minds.com' ) {
-        rewrite  ^/(.*)$  https://www.minds.com/$1  permanent;
+    if ($host = 'planetconcourse.world' ) {
+        rewrite  ^/(.*)$  https://www.planetconcourse.world/$1  permanent;
     }
 
     if ($http_x_forwarded_proto != "https") {
